                                                        -*- coding: utf-8 -*-
Changes with Apache 2.3.2
[ When backported to 2.2.x, remove entry from this file ]

 *) mod_ssl: Fix merging of SSLRenegBufferSize directive. PR 46508
    [<tlhackque yahoo.com>]

 *) core: Translate the the status line to ASCII on EBCDIC platforms in
    ap_send_interim_response() and for locally generated "100 Continue"
    responses.  [Eric Covener]

 *) mod_authnz_ldap: Reduce number of initialization debug messages and make
    information more clear. PR 46342 [Dan Poirier]

 *) prefork: Fix child process hang during graceful restart/stop in
    configurations with multiple listening sockets.  PR 42829.  [Joe Orton,
    Jeff Trawick]

 *) prefork: Log an error instead of segfaulting when child startup fails
    due to pollset creation failures.  PR 46467.  [Jeff Trawick]

 *) mod_session_crypto: Ensure that SessionCryptoDriver can only be
    set in the global scope. [Graham Leggett]

 *) mod_ext_filter: We need to detect failure to startup the filter
    program (a mangled response is not acceptable).  Fix to detect
    failure, and offer configuration option either to abort or
    to remove the filter and continue.
    PR 41120 [Nick Kew]

 *) mod_session_crypto: Rewrite the session_crypto module against the
    apr_crypto API. [Graham Leggett]

 *) mod_auth_form: Fix a pool lifetime issue, don't remove the subrequest
    until the main request is cleaned up. [Graham Leggett]

Changes with Apache 2.3.1

 *) ap_slotmem: Add in new slot-based memory access API impl., including
    2 providers (mod_sharedmem and mod_plainmem) [Jim Jagielski,
    Jean-Frederic Clere, Brian Akins <brian.akins turner.com>]

 *) mod_include: support generating non-ASCII characters as entities in SSI
    PR 25202 [Nick Kew]

 *) core/utils: Enhance ap_escape_html API to support escaping non-ASCII chars
    PR 25202 [Nick Kew]

 *) mod_rewrite: fix "B" flag breakage by reverting r5589343